Initial commit. FullAutoTOC works as an enhanced version of AutoTOC.exe. SFARTools partially implemented.

--- a/SFARTools/SFARTools.csproj
+++ b/SFARTools/SFARTools.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6946DB0F-BEBD-4380-B8B3-D3A76BFC8DE3}</ProjectGuid>
+    <ProjectGuid>{42BEC400-6832-437C-9239-7BF78CCEFADD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ModManagerCommandLineTools</RootNamespace>
-    <AssemblyName>ModManagerCommandLineTools</AssemblyName>
+    <RootNamespace>SFARTools</RootNamespace>
+    <AssemblyName>SFARTools</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,9 +47,17 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SFAR.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharedTools\SharedTools.csproj">
+      <Project>{19674e94-aef7-4e8f-8e48-ede1a7a35ba0}</Project>
+      <Name>SharedTools</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
