--- a/SFARTools-Inject/SFARTools-Inject.csproj
+++ b/SFARTools-Inject/SFARTools-Inject.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{42BEC400-6832-437C-9239-7BF78CCEFADD}</ProjectGuid>
+    <ProjectGuid>{C8F5E4CF-EA60-4982-B428-B3D8F8A12AA7}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SFARTools</RootNamespace>
-    <AssemblyName>SFARTools</AssemblyName>
+    <RootNamespace>SFARTools_Inject</RootNamespace>
+    <AssemblyName>SFARTools-Inject</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,8 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,18 +45,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DLCPackage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SFAR.cs" />
+    <Compile Include="SerializingFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SharedTools\SharedTools.csproj">
-      <Project>{19674e94-aef7-4e8f-8e48-ede1a7a35ba0}</Project>
-      <Name>SharedTools</Name>
+    <ProjectReference Include="C:\Users\Michael\Downloads\LZMA-compression-master\SevenZip.csproj">
+      <Project>{67a14617-b989-47d1-8a8a-a8aef1b01970}</Project>
+      <Name>SevenZip</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
