--- a/SFARTools-Inject/SFARTools-Inject.csproj
+++ b/SFARTools-Inject/SFARTools-Inject.csproj
@@ -82,13 +82,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SevenZip\SevenZip.csproj">
-      <Project>{67a14617-b989-47d1-8a8a-a8aef1b01970}</Project>
-      <Name>SevenZip</Name>
-    </ProjectReference>
+    <Content Include="ILMergeOrder.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ILMergeOrder.txt" />
+    <ProjectReference Include="..\SharedTools\SharedTools.csproj">
+      <Project>{19674e94-aef7-4e8f-8e48-ede1a7a35ba0}</Project>
+      <Name>SharedTools</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
