Fixed for SFARtools-Inject (when deleting files). Removed --IgnoreMissingPaths from SFARTools-Extract as it was always enabled anyways. Now outputs what file is being removed in SFARTools-Inject when deleting files in SFARs. Class indexes for exports in PCC data dumps is now properly aligned instead of being off by 1 when looking at the superclass.

--- a/SFARTools-Inject/SFARTools-Inject.csproj
+++ b/SFARTools-Inject/SFARTools-Inject.csproj
@@ -94,7 +94,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /y "$(TargetPath)" "$(SolutionDir)Output\$(Platform)\$(TargetFileName)"
-copy /y "$(SolutionDir)dlls\sevenzipwrapper.dll"  "$(TargetDir)sevenzipwrapper.dll" /y
+copy /y "$(SolutionDir)dlls\sevenzipwrapper-x64.dll"  "$(TargetDir)sevenzipwrapper.dll" /y
 copy /y "$(TargetPath)" "C:\Users\Michael\workspace\modmanager3\data\tools\ModManagerCommandLine\$(Platform)\$(TargetFileName)"</PostBuildEvent>
   </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
