--- a/Transplanter-CLI/Transplanter-CLI.csproj
+++ b/Transplanter-CLI/Transplanter-CLI.csproj
@@ -138,7 +138,8 @@
   </Target>
   <Import Project="..\packages\MSBuild.ILMerge.Task.1.0.5\build\MSBuild.ILMerge.Task.targets" Condition="Exists('..\packages\MSBuild.ILMerge.Task.1.0.5\build\MSBuild.ILMerge.Task.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>copy /y "$(TargetPath)" "$(SolutionDir)Output\$(Platform)\$(TargetFileName)"
+    <PostBuildEvent>if $(ConfigurationName) == Release signtool sign /n "Michael Perez" /tr http://timestamp.digicert.com /td sha256 /fd sha256 /a "$(TargetPath)"
+copy /y "$(TargetPath)" "$(SolutionDir)Output\$(Platform)\$(TargetFileName)"
 copy /y "$(SolutionDir)dlls\elevate.exe"  "$(SolutionDir)Output\$(Platform)\elevate.exe" /y
 
 if $(Platform)==x64 copy /y "$(SolutionDir)dlls\sevenzipwrapper-x64.dll"  "$(TargetDir)sevenzipwrapper.dll" /y
@@ -147,7 +148,9 @@ if $(Platform)==x64 copy /y "$(SolutionDir)dlls\zlibwrapper-x64.dll"  "$(Solutio
 
 if $(Platform)==x64 copy /y "$(SolutionDir)dlls\lzo2wrapper.dll"  "$(TargetDir)lzo2wrapper.dll" /y
 if $(Platform)==x64 copy /y "$(SolutionDir)dlls\lzo2wrapper.dll"  "$(SolutionDir)Output\$(Platform)\lzo2wrapper.dll" /y
-if $(Platform)==x64 copy /y "$(SolutionDir)dlls\lzo2wrapper.dll"  "$(SolutionDir)Output\$(Platform)\lzo2wrapper.dll" /y</PostBuildEvent>
+if $(Platform)==x64 copy /y "$(SolutionDir)dlls\lzo2wrapper.dll"  "$(SolutionDir)Output\$(Platform)\lzo2wrapper.dll" /y
+
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
