--- a/SFARTools/SFARTools-Extract.csproj
+++ b/SFARTools/SFARTools-Extract.csproj
@@ -9,11 +9,12 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SFARTools</RootNamespace>
     <AssemblyName>SFARTools-Extract</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
